Debugging and Created User model and controllers

--- a/app/views/cat_rental_requests/index.html.erb
+++ b/app/views/cat_rental_requests/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @requests.each do |request| %>
   <li>
-    <%= @request.cat_id %>
+    <%= request.cat_id %>
   </li>
   <% end %>
 </ul>
