--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -2,8 +2,9 @@
 <% action_url = @cat.persisted? ? cat_url(@cat) : cats_url %>
 
 <form action="<%=action_url%>" method="post">
-  <input type="hidden" name="_method" value="<%=form_method%>"
-  <input type="text" id="Cat Name" name="cat[name]" value="<%=@cat.name%>">
+  <input type="hidden" name="_method" value="<%=form_method%>">
+  <label for="cat_name"> Name</label>
+  <input type="text" id="cat_name" name="cat[name]" value="<%=@cat.name%>">
   <br>
   <label for="cat_color"> Color</label>
   <select name="cat[color]" id="cat_color">
