--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,9 @@
 <h1> SIGN UP PLEASE </h1>
 
 <form action="<%= users_url %>" method="POST">
+  <input type="hidden"
+       name="authenticity_token"
+       value="<%= form_authenticity_token %>">
   <label for="user_name"> Username</label>
   <input type="text" id="user_name" name="user[username]">
   <br>
