--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% if !current_user.nil? %>
+    <form action=" <%= session_url %>" method="post">
+      <input type="hidden"
+           name="authenticity_token"
+           value="<%= form_authenticity_token %>">
+    <input type="hidden" name="_method" value="delete">
+
+    <button>Logout</button>
+  <% end %>
+
 
 <%= yield %>
 
