--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,18 @@
 </head>
 <body>
   <% if !current_user.nil? %>
-    <form action=" <%= session_url %>" method="post">
+    <form action="<%= session_url %>" method="post">
       <input type="hidden"
            name="authenticity_token"
            value="<%= form_authenticity_token %>">
     <input type="hidden" name="_method" value="delete">
 
     <button>Logout</button>
+  </form>
+
+    <% else %>
+    <a href="<%= new_session_url %>">Login</a>
+
   <% end %>
 
 
