--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -8,6 +8,7 @@
     <th>Sex</th>
     <th>color</th>
     <th>description</th>
+    <th>Owner</th>
   </tr>
   <tr>
     <th><%= @cat.name%></th>
@@ -15,8 +16,11 @@
     <th><%=@cat.sex%></th>
     <th><%= @cat.color%></th>
     <th><%= @cat.description%></th>
+    <th><%= @cat.owner.username%></th>
   </tr>
 </table>
+
+<a href="<%= new_cat_rental_request_url %>">Rent this cat!</a>
 
 <table style="width:100%">
   <tr>
@@ -26,8 +30,10 @@
       <th> <%=request.start_date%></th>
       <th> <%= request.end_date%></th>
       <th> <%=request.status%></th>
+      <th> <%=request.user.username%></th>
       <th>
-        <% if request.pending? %>
+        <% if request.pending? && !current_user.nil?%>
+        <% if @cat.user_id == current_user.id%>
         <form action="<%= cat_rental_request_deny_url(request) %>" method="post">
         <input type="hidden" name="_method" value="patch">
         <input type="hidden"
@@ -36,8 +42,8 @@
 
         <button>Deny Request</button>
         </form>
-        <% end %> </th>
-      <th> <% if request.pending? %>
+       </th>
+      <th>
         <form action="<%= cat_rental_request_approve_url(request) %>" method="post">
         <input type="hidden" name="_method" value="patch">
         <input type="hidden"
@@ -46,6 +52,7 @@
 
         <button>Approve Request</button>
       </form>
+      <% end %>
       <% end %></th>
 
     </tr>
